# qml-module-serial-port

./: CMakeLists.txt
include/: io_port_interface.h  serial_port.h  udp_port.h
include/gui/: serial_port_gui.h  udp_port_gui.h
include/utils/: ping.h
qml/: SerialPort.qml  UdpPort.qml
src/: serial_port.cpp  udp_port.cpp
src/gui/: serial_port_gui.cpp  udp_port_gui.cpp
src/utils/: ping_windows.cpp
